--- a/web/bundles/app/css/backgrounds.css
+++ b/web/bundles/app/css/backgrounds.css
@@ -1,7 +1,10 @@
 .bg{
     background: url("../images/bg.jpg") no-repeat;
     background-size: 100%;
-    opacity: .8;
+
+}
+.bgblack{
+    background-color: #000000;
 }
 .height1000{
     min-height:1000px;
