--- a/web/bundles/app/css/header.css
+++ b/web/bundles/app/css/header.css
@@ -1,11 +1,22 @@
 #header{
     position: absolute;
     top:0;
+    padding-top:5px;
     height:120px;
     width:100%;
-    background-color: #f7f7f7;
 }
 .fullpage{
-    margin-top:120px;
-    padding-top: 20px;
+    padding-top: 120px;
 }
+.mainmenu > li {
+    color: white;
+    float: right;
+    margin: 20px 10px;
+    list-style: none;
+}
+
+.mainmenu > li > a{
+    color:white;
+    text-transform: uppercase;
+}
+
