--- a/web/css/69a145c_part_1_backgrounds_1.css
+++ b/web/css/69a145c_part_1_backgrounds_1.css
@@ -1,5 +1,5 @@
 .bg{
-    background: url("../images/bg.jpg") no-repeat;
+    background: url("../../bundles/app/images/bg.jpg") no-repeat;
     background-size: 100%;
 }
 .bgblack{
