--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% stylesheets '@bootstrap_css' %}
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
+            <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
+            <link href='http://fonts.googleapis.com/css?family=Sanchez' rel='stylesheet' type='text/css'>
         {% endstylesheets %}
         {% block stylesheets %}
             {% stylesheets 'bundles/app/css/*.css' filter='cssrewrite' %}
