--- a/web/css/69a145c.css
+++ b/web/css/69a145c.css
@@ -1,7 +1,6 @@
 .bg{
-    background: url("../bundles/app/images/bg.jpg") no-repeat;
+    background: url("../../bundles/app/images/bg.jpg") no-repeat;
     background-size: 100%;
-
 }
 .bgblack{
     background-color: #000000;
@@ -10,14 +9,20 @@
     min-height:1000px;
 }
 #header{
+    font-size:14px;
     position: absolute;
     top:0;
     padding-top:5px;
-    height:120px;
+    height:80px;
     width:100%;
+    background: -webkit-linear-gradient(top,rgba(255,255,255,0),rgba(00,0,0,.7)); /*Safari 5.1-6*/
+    background: -o-linear-gradient(bottom,rgba(255,255,255,0),rgba(0,0,0,.7)); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(top,rgba(255,255,255,0),rgba(0,0,0,.7)); /*Fx 3.6-15*/
+    background: linear-gradient(to top, rgba(255,255,255,0), rgba(0,0,0,.7)); /*Standard*/
+
 }
 .fullpage{
-    padding-top: 120px;
+    padding-top: 110px;
 }
 .mainmenu > li {
     color: white;
@@ -31,7 +36,136 @@
     text-transform: uppercase;
 }
 
+.logo {
+    position: relative;
+}
+.logo > img {
+    width: 50%
+}
+@media (max-width : 1200px) {
+    #header{
+        height:100px;
+    }
+    .fullpage{
+        padding-top: 100px;
+    }
+    .logo > img {
+        width: 60%
+    }
+}
+@media (max-width : 991px) {
+    #header{
+        height:80px;
+    }
+    .fullpage{
+        padding-top: 80px;
+    }
+    .logo > img {
+        width: 90%
+    }
+}
+@media (max-width : 768px) {
+    #header {
+        font-size: 12px;
+        height:60px;
+    }
+    .long-name{
+        display:none;
+    }
+    .fullpage{
+        padding-top: 60px;
+    }
+    .logo > img {
+        width: 100%
+    }
+    .mainmenu > li {
+        margin: 10px 5px;
+    }
+}
+@media (max-width : 480px) {
+    #header {
+        font-size: 10px;
+        height:50px;
+    }
+    .fullpage{
+        padding-top: 50px;
+    }
+    .logo > img {
+        padding-top:5px;
+        width: 120%
+    }
+}
+
 
 .homepage > h3{
-    color:white;
+    text-align:center;
+    margin-top:30px;
+    font-family: 'Sanchez', serif;
+    font-size:36px;
+}
+.homepage{
+    color:#111111;
+    background:rgba(250,250,250,.9);
+    border-radius:4px 4px 0 0;
+}
+@media (max-width : 1200px) {
+
+}
+@media (max-width : 991px) {
+
+}
+@media (max-width: 768px) {
+    .homepage{
+        border-radius:0;
+    }
+}
+.video-content{
+    width:1000px;
+    margin:40px auto;
+}
+.video-content > iframe{
+    width:1000px;
+    height:600px;
+    margin:0 auto;
+}
+@media (max-width : 1200px) {
+    .video-content{
+        width:800px;
+        margin:30px auto;
+    }
+    .video-content > iframe{
+        width:800px;
+        height:500px;
+        margin:0 auto;
+    }
+}
+@media (max-width : 991px) {
+    .video-content{
+        width:700px;
+        margin:30px auto;
+    }
+    .video-content > iframe{
+        width:700px;
+        height:430px;
+    }
+}
+@media (max-width: 768px) {
+    .homepage{
+        border-radius:0;
+    }
+    .video-content{
+        width:100%;
+    }
+    .video-content > iframe{
+        width:100%;
+        height:300px;
+    }
+}
+@media (max-width: 480px) {
+    .homepage{
+        border-radius:0;
+    }
+    .video-content > iframe{
+        height:250px;
+    }
 }
