--- a/web/css/69a145c_part_1_backgrounds_2.css
+++ b/web/css/69a145c_part_1_backgrounds_2.css
@@ -1,6 +1,7 @@
 .bg{
-    background: url("../images/bg.jpg") no-repeat;
+    background: url("../../bundles/app/images/bg.jpg") no-repeat;
     background-size: 100%;
+
 }
 .bgblack{
     background-color: #000000;
