--- a/src/S2/ModuleBundle/Resources/views/Default/index.html.twig
+++ b/src/S2/ModuleBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,10 @@
 {% extends "::default/index.html.twig" %}
  {% block modules %}
-     <h3>Welcome to the <span class="text-capitalize"> {{ name|replace('-',' ')}}</span> module!</h3>
+     <h3>Welcome to the <span class="text-capitalize"> {{ module.name }}</span> module!</h3>
      <div class="video-content">
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/xQ_IQS3VKjA" frameborder="0" allowfullscreen></iframe>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ module.youtubeid}}" frameborder="0" allowfullscreen></iframe>
+        <div class="general-content video-description">
+            <p>{{ module.description }}</p>
+        </div>
      </div>
  {% endblock %}
