--- a/web/bundles/app/css/backgrounds.css
+++ b/web/bundles/app/css/backgrounds.css
@@ -1,10 +1,17 @@
 .bg{
-    background: url("../images/bg.jpg") no-repeat;
-    background-size: 100%;
+    background: url("../images/bg.jpg") no-repeat center center / cover;
 }
 .bgblack{
     background-color: #000000;
 }
 .height1000{
     min-height:1000px;
+}
+.general-content{
+
+    background-color:#E1E1E1;
+    padding:10px;
+    border-radius:8px;
+    border:1px solid #D7D7D7;
+
 }
