--- a/web/bundles/app/css/module.css
+++ b/web/bundles/app/css/module.css
@@ -6,6 +6,63 @@
     width:1000px;
     height:600px;
     margin:0 auto;
+    padding-bottom: 20px;
+}
+.module-edit-list > li > iframe{
+    width:100%;
+    height:200px;
+    margin:0 auto;
+    padding-bottom: 20px;
+}
+#s2_modulebundle_module_description{
+    width: 100%;
+    max-width: 100%;
+    min-height:200px;
+}
+#s2_modulebundle_module_name{
+    width: 100%;
+}
+#s2_modulebundle_module_submit {
+    width: 100%;
+    background-color: darkred;
+    color:white;
+    border-radius:5px;
+    border:0px;
+    height:30px;
+    box-shadow: 1px 1px 3px #444444;
+}
+#s2_modulebundle_module_submit:hover {
+    width: 100%;
+    background-color: #AA0000;
+
+    border:1px solid rgba(200,100,100,.7);
+    height:30px;
+    box-shadow: 1px 1px 6px #444444;
+}
+.module-delete-btn button{
+    float:right;
+    width:30%;
+    background: #111111;
+    border-radius:5px;
+    border:0px;
+    color:white;
+    box-shadow: 1px 1px 3px #444444;
+}
+.module-delete-btn button:hover{
+    background: #444444;
+    box-shadow: 1px 1px 4px #444444;
+}
+#youtube-preview{
+    margin-top:0;
+}
+.records_list, .record_properties{
+    background-color: #f3f3f3;
+}
+.module-edit-list > li{
+    margin:10px 0;
+}
+.module-edit-list-label{
+    padding-top:10px;
 }
 @media (max-width : 1200px) {
     .video-content{
