--- a/web/css/69a145c.css
+++ b/web/css/69a145c.css
@@ -1,12 +1,19 @@
 .bg{
-    background: url("../../bundles/app/images/bg.jpg") no-repeat;
-    background-size: 100%;
+    background: url("../../bundles/app/images/bg.jpg") no-repeat center center / cover;
 }
 .bgblack{
     background-color: #000000;
 }
 .height1000{
     min-height:1000px;
+}
+.general-content{
+
+    background-color:#E1E1E1;
+    padding:10px;
+    border-radius:8px;
+    border:1px solid #D7D7D7;
+
 }
 #header{
     font-size:14px;
@@ -39,7 +46,7 @@
 .logo {
     position: relative;
 }
-.logo > img {
+.logo > a > img {
     width: 50%
 }
 @media (max-width : 1200px) {
@@ -97,15 +104,18 @@
 }
 
 
-.homepage > h3{
+ul{
+    list-style: none;
+}
+.modules > h3{
     text-align:center;
     margin-top:30px;
     font-family: 'Sanchez', serif;
     font-size:36px;
 }
-.homepage{
+.modules{
     color:#111111;
-    background:rgba(250,250,250,.9);
+    background:rgba(255,255,255,.9);
     border-radius:4px 4px 0 0;
 }
 @media (max-width : 1200px) {
@@ -115,7 +125,7 @@
 
 }
 @media (max-width: 768px) {
-    .homepage{
+    .modules{
         border-radius:0;
     }
 }
@@ -127,6 +137,63 @@
     width:1000px;
     height:600px;
     margin:0 auto;
+    padding-bottom: 20px;
+}
+.module-edit-list > li > iframe{
+    width:100%;
+    height:200px;
+    margin:0 auto;
+    padding-bottom: 20px;
+}
+#s2_modulebundle_module_description{
+    width: 100%;
+    max-width: 100%;
+    min-height:200px;
+}
+#s2_modulebundle_module_name{
+    width: 100%;
+}
+#s2_modulebundle_module_submit {
+    width: 100%;
+    background-color: darkred;
+    color:white;
+    border-radius:5px;
+    border:0px;
+    height:30px;
+    box-shadow: 1px 1px 3px #444444;
+}
+#s2_modulebundle_module_submit:hover {
+    width: 100%;
+    background-color: #AA0000;
+
+    border:1px solid rgba(200,100,100,.7);
+    height:30px;
+    box-shadow: 1px 1px 6px #444444;
+}
+.module-delete-btn button{
+    float:right;
+    width:30%;
+    background: #111111;
+    border-radius:5px;
+    border:0px;
+    color:white;
+    box-shadow: 1px 1px 3px #444444;
+}
+.module-delete-btn button:hover{
+    background: #444444;
+    box-shadow: 1px 1px 4px #444444;
+}
+#youtube-preview{
+    margin-top:0;
+}
+.records_list, .record_properties{
+    background-color: #f3f3f3;
+}
+.module-edit-list > li{
+    margin:10px 0;
+}
+.module-edit-list-label{
+    padding-top:10px;
 }
 @media (max-width : 1200px) {
     .video-content{
