--- a/web/css/69a145c_part_1_homepage_3.css
+++ b/web/css/69a145c_part_1_homepage_3.css
@@ -1,12 +1,15 @@
-.homepage > h3{
+ul{
+    list-style: none;
+}
+.modules > h3{
     text-align:center;
     margin-top:30px;
     font-family: 'Sanchez', serif;
     font-size:36px;
 }
-.homepage{
+.modules{
     color:#111111;
-    background:rgba(250,250,250,.9);
+    background:rgba(255,255,255,.9);
     border-radius:4px 4px 0 0;
 }
 @media (max-width : 1200px) {
@@ -16,7 +19,7 @@
 
 }
 @media (max-width: 768px) {
-    .homepage{
+    .modules{
         border-radius:0;
     }
 }
