--- a/web/css/69a145c.css
+++ b/web/css/69a145c.css
@@ -1,5 +1,5 @@
 .bg{
-    background: url("../../bundles/app/images/bg.jpg") no-repeat center center / cover;
+    background: url("../bundles/app/images/bg.jpg") no-repeat center center / cover;
 }
 .bgblack{
     background-color: #000000;
