--- a/web/bundles/app/css/backgrounds.css
+++ b/web/bundles/app/css/backgrounds.css
@@ -1,7 +1,13 @@
 .bg{
+    height:100%;
     background: url("../images/bg.jpg") no-repeat center center / cover;
 }
+.bgwide{
+    background: url("../images/bgwide.jpg") no-repeat center center / cover;
+    height:500px;
+}
 .bgblack{
+    height:100%;
     background-color: #000000;
 }
 .height1000{
@@ -14,4 +20,25 @@
     border-radius:8px;
     border:1px solid #D7D7D7;
 
+}
+@media (max-width : 1200px) {
+    .bgwide{
+        height:400px;
+    }
+}
+@media (max-width : 991px) {
+    .bgwide{
+        background: url("../images/bgwide.jpg") no-repeat center center / cover;
+        height:300px;
+    }
+}
+@media (max-width : 768px) {
+    .bgwide{
+        height:200px;
+    }
+}
+@media (max-width : 480px) {
+    .bgwide{
+        height:200px;
+    }
 }
