--- a/web/bundles/app/css/header.css
+++ b/web/bundles/app/css/header.css
@@ -1,6 +1,7 @@
+html,body { height:100%; }
 #header{
-    font-size:14px;
-    position: absolute;
+    font-size:13px;
+    position: fixed;
     top:0;
     padding-top:5px;
     height:80px;
@@ -9,7 +10,7 @@
     background: -o-linear-gradient(bottom,rgba(255,255,255,0),rgba(0,0,0,.7)); /*Opera 11.1-12*/
     background: -moz-linear-gradient(top,rgba(255,255,255,0),rgba(0,0,0,.7)); /*Fx 3.6-15*/
     background: linear-gradient(to top, rgba(255,255,255,0), rgba(0,0,0,.7)); /*Standard*/
-
+    z-index:10;
 }
 .fullpage{
     padding-top: 110px;
@@ -35,6 +36,7 @@
 @media (max-width : 1200px) {
     #header{
         height:100px;
+        font-size: 12px;
     }
     .fullpage{
         padding-top: 100px;
