--- a/web/css/69a145c.css
+++ b/web/css/69a145c.css
@@ -1,7 +1,13 @@
 .bg{
-    background: url("../bundles/app/images/bg.jpg") no-repeat center center / cover;
+    height:100%;
+    background: url("../../bundles/app/images/bg.jpg") no-repeat center center / cover;
+}
+.bgwide{
+    background: url("../../bundles/app/images/bgwide.jpg") no-repeat center center / cover;
+    height:500px;
 }
 .bgblack{
+    height:100%;
     background-color: #000000;
 }
 .height1000{
@@ -15,9 +21,32 @@
     border:1px solid #D7D7D7;
 
 }
+@media (max-width : 1200px) {
+    .bgwide{
+        height:400px;
+    }
+}
+@media (max-width : 991px) {
+    .bgwide{
+        background: url("../../bundles/app/images/bgwide.jpg") no-repeat center center / cover;
+        height:300px;
+    }
+}
+@media (max-width : 768px) {
+    .bgwide{
+        height:200px;
+    }
+}
+@media (max-width : 480px) {
+    .bgwide{
+        height:200px;
+    }
+}
+
+html,body { height:100%; }
 #header{
-    font-size:14px;
-    position: absolute;
+    font-size:13px;
+    position: fixed;
     top:0;
     padding-top:5px;
     height:80px;
@@ -26,7 +55,7 @@
     background: -o-linear-gradient(bottom,rgba(255,255,255,0),rgba(0,0,0,.7)); /*Opera 11.1-12*/
     background: -moz-linear-gradient(top,rgba(255,255,255,0),rgba(0,0,0,.7)); /*Fx 3.6-15*/
     background: linear-gradient(to top, rgba(255,255,255,0), rgba(0,0,0,.7)); /*Standard*/
-
+    z-index:10;
 }
 .fullpage{
     padding-top: 110px;
@@ -52,6 +81,7 @@
 @media (max-width : 1200px) {
     #header{
         height:100px;
+        font-size: 12px;
     }
     .fullpage{
         padding-top: 100px;
@@ -104,34 +134,153 @@
 }
 
 
+body{
+    background-color: #E5E5E0;
+}
 ul{
     list-style: none;
 }
-.modules > h3{
+.info-page-header-holder{
+    height:160px;
+}
+.homepage-info h1{
+    margin:40px 0;
+    text-align:center;
+    font-size: 30px;
+    font-family: "Lucida Grande",Tahoma,Verdana,Arial,sans-serif;
+}
+.info-content{
+    text-align: left;
+    margin-top:25px;
+}
+.info-page{
+    margin-top:20px;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    border: 1px solid #cbcbcb;
+    text-align: center;
+}
+.info-page img{
+    margin:30px 0;
+    width:95%;
+}
+.info-page h3{
+    display:inline-block;
+    margin-top:30px;
+}
+.info-page ul{
+    padding:0;
+    list-style: square;
+}
+.info-page li{
+    padding:5px 0;
+}
+.logobike{
+    margin:0px 0 0 120px;
+    padding-top:150px;
+}
+.logobike > img{
+    width:1500px;
+}
+.pagesmenu{
+    background:#AA3333;
+    width:100%;
+    z-index: 10;
+}
+.pagesmenu a {
+    color: white;
+    font: 1.1em/1.6 "Lucida Grande",Tahoma,Verdana,Arial,sans-serif;
+}
+.pagesmenu ul{
+   margin:0;
+
+}
+.pagesmenu li{
+    display:inline-block;
+    padding:10px 20px;
+}
+@media (max-width : 1200px) {
+    .logobike{
+        margin:0px 0 0 50px;
+        padding-top:100px;
+    }
+    .logobike > img{
+        width:1300px;
+    }
+}
+@media (max-width : 991px) {
+    .logobike{
+        margin:0px 0 0 50px;
+        padding-top:45px;
+    }
+    .logobike > img{
+        width:1100px;
+    }
+}
+@media (max-width: 768px) {
+    .logobike{
+        margin:0px 0 0 30px;
+        padding-top:15px;
+    }
+    .logobike > img{
+        width:800px;
+    }
+}
+.infopage > h3{
     text-align:center;
     margin-top:30px;
     font-family: 'Sanchez', serif;
     font-size:36px;
 }
-.modules{
+#s2_pagebundle_infopage_title{
+    width: 100%;
+}
+.infopage .general-content{
+    background-color: white;
+}
+.login > h3{
+    text-align:center;
+    font-family: 'Sanchez', serif;
+    font-size:24px;
+}
+.login{
     color:#111111;
     background:rgba(255,255,255,.9);
-    border-radius:4px 4px 0 0;
+    border-radius:4px;
+    width: 350px;
+    text-align:center;
 }
-@media (max-width : 1200px) {
-
+.login li{
+    padding:10px 0;
+    text-align: center;
 }
-@media (max-width : 991px) {
-
+.login label{
+    padding:0 10px 0 0;
 }
-@media (max-width: 768px) {
-    .modules{
-        border-radius:0;
-    }
+.login button{
+    width:150px;
+    display: inline-block;
+    background: #111111;
+    border-radius:5px;
+    border:0px;
+    color:white;
+    box-shadow: 1px 1px 3px #444444;
+    margin:0 auto;
+}
+.login button:hover{
+    background: #444444;
+    box-shadow: 1px 1px 4px #444444;
+}
+.login .login-error{
+    background-color: #ce8483;
+    padding:10px;
+    border-radius: 3px;
+    border: 1px solid rgba(0,0,0,.2);
+    display: inline-block;
 }
 .video-content{
     width:1000px;
-    margin:40px auto;
+    margin:40px auto 50px;
 }
 .video-content > iframe{
     width:1000px;
@@ -145,7 +294,18 @@ ul{
     margin:0 auto;
     padding-bottom: 20px;
 }
-#s2_modulebundle_module_description{
+.modules > h3{
+    text-align:center;
+    margin-top:30px;
+    font-family: 'Sanchez', serif;
+    font-size:36px;
+}
+.modules{
+    color:#111111;
+    background:rgba(255,255,255,.9);
+    border-radius:4px;
+}
+textarea{
     width: 100%;
     max-width: 100%;
     min-height:200px;
@@ -153,7 +313,7 @@ ul{
 #s2_modulebundle_module_name{
     width: 100%;
 }
-#s2_modulebundle_module_submit {
+button {
     width: 100%;
     background-color: darkred;
     color:white;
@@ -162,7 +322,7 @@ ul{
     height:30px;
     box-shadow: 1px 1px 3px #444444;
 }
-#s2_modulebundle_module_submit:hover {
+button:hover {
     width: 100%;
     background-color: #AA0000;
 
@@ -198,7 +358,7 @@ ul{
 @media (max-width : 1200px) {
     .video-content{
         width:800px;
-        margin:30px auto;
+        margin:30px auto 40px;
     }
     .video-content > iframe{
         width:800px;
@@ -209,7 +369,6 @@ ul{
 @media (max-width : 991px) {
     .video-content{
         width:700px;
-        margin:30px auto;
     }
     .video-content > iframe{
         width:700px;
