--- a/src/S2/ModuleBundle/Resources/views/Module/show.html.twig
+++ b/src/S2/ModuleBundle/Resources/views/Module/show.html.twig
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <th>Name</th>
-                <td><a href="{{ path('/module') }}{{ entity.name | replace(" ","-") }}">{{ entity.name }}</a></td>
+                <td><a href="/demo-video/{{ entity.name | replace(" ","-") }}">{{ entity.name }}</a></td>
             </tr>
             <tr>
                 <th>Youtubeid</th>
