update path for module

--- a/src/S2/ModuleBundle/Resources/views/Module/show.html.twig
+++ b/src/S2/ModuleBundle/Resources/views/Module/show.html.twig
@@ -35,7 +35,7 @@
             Edit
         </a>
     </li>
-    <li>{{ form(delete_form) }}</li>
+    <li class="module-delete-btn">{{ form(delete_form) }}</li>
 </ul>
     </div>
 {% endblock %}
