--- a/web/css/69a145c.css
+++ b/web/css/69a145c.css
@@ -151,7 +151,11 @@ ul{
 }
 .info-content{
     text-align: left;
-    margin-top:25px;
+    margin:10px;
+    background: white;
+    padding:10px 30px;
+    border-radius: 5px;
+    border: 1px solid #ebebeb;
 }
 .info-page{
     margin-top:20px;
